2022-11-03 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, arp-scan.h: Don't display long usage message for unrecognised
	  options and other simple issues, but display brief message and exit instead.
	  A brief error message is clearer than half a page of usage text.

	* check-run1: Added tests for unrecognised option and no target hosts.

2022-11-02 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, arp-scan.1.dist: Change --format short option character
	  from -k to -F. The -F character became free when the --iabfile
	  option was removed, and is a more logical choice.

	  *** This means anyone who has been using the old -k short option ***
	  *** for --format will need to change to the new -F option.       ***

	* arp-scan.c, check-decode: Print warning message for unavailable
	  --format fields in addition to unknown fields.  Updated test.

	* arp-scan.c, check-decode: Only print vendor field if present for
	  the default output format.  Previously it printed NULL if --quiet
	  was specified. Added test to check-decode to check --quiet output.

2022-11-01 Roy Hills <royhills@hotmail.com>

	* arp-scan.h: Increase HASH_TABLE_SIZE from 50,000 to 70,000 due to
	  addition of IEEE MA-M and MA-S registries.  ieee-oui.txt currently
	  contains 47028 entries of 70000 (67.2%).

	* get-oui.1: renamed to get-oui.1.dist with PKGDATADIR substitution.

	* check-ieee-reg: New file to test IEEE registry lookup.

	* Makefile.am: Build man page "get-oui.1" from "get-oui.dist", added
	  check-ieee-reg test.

	* get-oui: Changed IEEE URLs from http to https. This avoids an HTTP
	  redirect from the http to https site.

	* ieee-oui.txt: Updated from IEEE website.

	* strlcat.c: removed. arp-scan only uses strlcpy(), so we don't need
	  to ship replacement source code for strcat() as well.

	* configure.ac, strlcpy.h: Removed references to strlcat.

2022-10-31 Roy Hills <royhills@hotmail.com>

	* get-oui: Changed to fetch registry data from all four IEEE registries